feat: Complete enterprise SaaS platform ready for launch
- Enhanced frontend with truthful About and Home pages
- Added comprehensive business analysis documentation
- Included AI cost analysis and revenue projections
- Added production deployment configurations (Docker, Railway)
- Updated .gitignore for security (API keys, environment variables)
- Added launch guides for technical and non-technical scenarios
- Documented sale valuation and market analysis
- Platform ready for + MRR enterprise deployment

Business docs: Launch guide, cost analysis, legal considerations
Technical: Production Dockerfiles, deployment scripts
Security: Enhanced .gitignore, environment protection

--- a/.gitignore
+++ b/.gitignore
@@ -22,16 +22,33 @@ out/
 # TypeScript
 *.tsbuildinfo
 
-# Environment variables
+# Environment variables - CRITICAL FOR SECURITY
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+backend/.env
+backend/.env.local
+backend/.env.production
+frontend/.env
+frontend/.env.local
+frontend/.env.production
+
+# API Keys and Secrets - NEVER COMMIT THESE
+*.key
+*api-key*
+*secret*
+openai-api-key.txt
+stripe-keys.txt
+api-keys/
+secrets/
 
 # Logs
-logs
+logs/
 *.log
+backend/logs/
+frontend/logs/
 
 # Runtime data
 pids
